2001-08-04  Kevin Vandersloot <kfv101@psu.edu>

	* procman.c: new config variables to save window geometry.
	Save the window size on exit.

	* interface.c: set the default size.

	* memmaps.c: remove some debugging stuff and the connecting 
	to the right click signal.

2001-08-03  Kevin Vandersloot <kfv101@psu.edu>

	* load-graph.c: call load_graph_draw on the configure event. This
	removes the slight delay in drawing when switching tabs.

	* callbacks.c (cb_switch_page): remove the calls to load_graph_draw
	here since they did not help and the graph was not visible at that
	point so their effects were not noticable.

	* procman.c: make the default grid color a light green. Hopefully
	people dont' find it too ugly. Please someone provide me with a way
	to make a nice looking graph. I need help here. Pleeeease.

2001-08-03  Kevin Vandersloot <kfv101@psu.edu>

	* procdialogs.c: cosmetic improvements to the prefs dialog
	mainly making the two tabs have similar layouts.

2001-08-03  Kevin Vandersloot <kfv101@psu.edu>

	* procdialogs.c (create_kill_dialog): pass in the signal now
	so either SIGKILL or SIGTERM can use this dialog. Change the
	button labels accordingly.

	* callbacks.c: use the create_kill_dailog properly adding
	the signal to the argument.

	* interface.c: left align the disk name and mount point

	* util.c: fix a memory leak

2001-08-02  Kevin Vandersloot <kfv101@psu.edu>

	* procdialogs.c: improve the renice dialog by adding a label
	indicating whether the priority is high etc.

	* infoview.c: sync the priority label with that of the renice
	dialog

2001-08-01  Kevin Vandersloot <kfv101@psu.edu>

	* procdialogs.c (create_root_password_dialog) pass a gchar here
	as a argument for the dialog text. This way a seperate dialog
	asking if the user wants to enter the password is not needed. 
	Beautify the dialog a bit
	(create_renice_dialog) change the button to read Change Priority
	instead of renice.

	* procactions.c: pass the root password text to 