@@ -1,3 +1,13 @@
+2001-08-06  Kevin Vandersloot <kfv101@psu.edu>
+
+	* interface.c: make disk frame label center align to be
+	similar to the graph frame labels.
+
+	* procdialogs.c: Make minimum timeout for proc view be 0.5
+	as any lower uses too much cpu on my computer. Make the disk
+	timeout mimum be 1 sec and the adjust amount be 1 sec
+	intervals in the spin button
+
 2001-08-04  Kevin Vandersloot <kfv101@psu.edu>
 
 	* procman.c: new config variables to save window geometry.
